--- a/app/views/layouts/antispam/application.html.erb
+++ b/app/views/layouts/antispam/application.html.erb
@@ -4,7 +4,7 @@
   <title>Antispam</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-
+  <style>.row { width:100%;display: flex;} .cx { width: 50%; }</style>
   <%#= stylesheet_link_tag    "antispam/application", media: "all" %>
 </head>
 <body>
