--- a/app/views/antispam/blocks/index.html.erb
+++ b/app/views/antispam/blocks/index.html.erb
@@ -1,37 +1,36 @@
 <p id="notice"><%= notice %></p>
 
-<div style="cx">
-<h1>Blocks</h1>
+<div class="row">
+  <div class="cx">
+    <h1>Blocks</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Ip</th>
-      <th>Provider</th>
-      <th>Controllername</th>
-      <th>Actionname</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <table>
+      <thead>
+        <tr>
+          <th>Ip</th>
+          <th>Provider</th>
+          <th>Controllername</th>
+          <th>Actionname</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% Block.all.order(create_at: :desc).limit(50).each do |block| %>
-      <tr>
-        <td><%= block.ip %></td>
-        <td><%= block.provider %></td>
-        <td><%= block.controllername %></td>
-        <td><%= block.actionname %></td>
-        <td><%= link_to 'Show', block %></td>
-        <td><%= link_to 'Edit', edit_block_path(block) %></td>
-        <td><%= link_to 'Destroy', block, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% Antispam::Block.all.order(create_at: :desc).limit(50).each do |block| %>
+          <tr>
+            <td><%= block.ip %></td>
+            <td><%= block.provider %></td>
+            <td><%= block.controllername %></td>
+            <td><%= block.actionname %></td>
+            <td><%= link_to 'Show', block %></td>
+            <td><%= link_to 'Edit', edit_block_path(block) %></td>
+            <td><%= link_to 'Destroy', block, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="cx">
+    <%= render template: '/antispam/clears/index.html' %>
+  </div>
 </div>
-<div class="cx">
-  <%= render template: '/antispam/clears/index.html' %>
-</div>
-<br>
-
-<%= link_to 'New Block', new_block_path %>
