--- a/app/views/antispam/blocks/index.html.erb
+++ b/app/views/antispam/blocks/index.html.erb
@@ -22,9 +22,10 @@
             <td><%= block.provider %></td>
             <td><%= block.controllername %></td>
             <td><%= block.actionname %></td>
-            <td><%= link_to 'Show', block %></td>
-            <td><%= link_to 'Edit', edit_block_path(block) %></td>
-            <td><%= link_to 'Destroy', block, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= time_ago_in_words block.created_at %> ago</td>
+<!--            <td><%#= link_to 'Show', block %></td>-->
+<!--            <td><%#= link_to 'Edit', edit_block_path(block) %></td>-->
+<!--            <td><%#= link_to 'Destroy', block, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
           </tr>
         <% end %>
       </tbody>
