--- a/app/views/antispam/clears/index.html.erb
+++ b/app/views/antispam/clears/index.html.erb
@@ -15,7 +15,7 @@
   </thead>
 
   <tbody>
-    <% Antispam::Clear.all.order(create_at: :desc).limit(50).each do |clear| %>
+    <% Antispam::Clear.all.order(created_at: :desc).limit(50).each do |clear| %>
       <tr>
         <td><%= clear.ip %></td>
         <td><%= clear.result %></td>
