--- a/app/views/antispam/blocks/index.html.erb
+++ b/app/views/antispam/blocks/index.html.erb
@@ -11,6 +11,7 @@
           <th>Provider</th>
           <th>Controllername</th>
           <th>Actionname</th>
+          <th>Threat</th>
           <th colspan="3"></th>
         </tr>
       </thead>
@@ -22,6 +23,7 @@
             <td><%= block.provider %></td>
             <td><%= block.controllername %></td>
             <td><%= block.actionname %></td>
+            <td><%= block.threat %></td>
             <td><%= time_ago_in_words block.created_at %> ago</td>
 <!--            <td><%#= link_to 'Show', block %></td>-->
 <!--            <td><%#= link_to 'Edit', edit_block_path(block) %></td>-->
