--- a/app/views/antispam/blocks/index.html.erb
+++ b/app/views/antispam/blocks/index.html.erb
@@ -34,6 +34,6 @@
     </table>
   </div>
   <div class="cx">
-    <%= render template: '/antispam/clears/index.html' %>
+    <%= render template: '/antispam/clears/index', formats: :html %>
   </div>
 </div>
