--- a/app/views/layouts/antispam/application.html.erb
+++ b/app/views/layouts/antispam/application.html.erb
@@ -4,6 +4,7 @@
   <title>Antispam</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   .row { width:100%;display: flex;}
   .cx { width: 50%; }
