--- a/app/views/antispam/signups/index.html.erb
+++ b/app/views/antispam/signups/index.html.erb
@@ -11,6 +11,7 @@
       <th>Number from this IP</th>
       <th>Created At</th>
       <th>Updated At</th>
+      <th>Safe?</th>
     </tr>
   </thead>
 
@@ -23,6 +24,7 @@
         <td><%= signup.number_from_this_ip %></td>
         <td><%= signup.created_at %></td>
         <td><%= signup.updated_at %></td>
+        <td><%= signup.safe? %></td>
       </tr>
     <% end %>
   </tbody>
