--- a/app/views/antispam/signups/index.html.erb
+++ b/app/views/antispam/signups/index.html.erb
@@ -12,6 +12,7 @@
       <th>Created At</th>
       <th>Updated At</th>
       <th>Safe?</th>
+      <th>Score</th>
     </tr>
   </thead>
 
@@ -22,9 +23,10 @@
         <td><%= signup.ip %></td>
         <td><%= signup.country_code %></td>
         <td><%= signup.number_from_this_ip %></td>
-        <td><%= signup.created_at %></td>
-        <td><%= signup.updated_at %></td>
+        <td><%= signup.created_at.strftime("%Y-%m-%d %I:%M %p") %></td>
+        <td><%= signup.updated_at.strftime("%Y-%m-%d %I:%M %p") %></td>
         <td><%= signup.safe? %></td>
+        <td><%= signup.score %></td>
       </tr>
     <% end %>
   </tbody>
